--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@ document.getElementById("2016").innerHTML = listCountries(Y2016);
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
         <script src="script.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=API_KEY&callback=mapInitialize" onerror="googleError()" async defer>
+        <script src="https://maps.googleapis.com/maps/api/js?key=ADDD&callback=mapInitialize" onerror="googleError()" async defer>
             
         
 </script>
