--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <script src="script.js"></script>
 			<script src="Countries2nd.js"></script>
 	
-			<script src="https://maps.googleapis.com/maps/api/js?key=KEY&callback=mapInitialize" onerror="googleError()" async defer>
+			<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhfx5ztQ2WuiZyMWQTDtbdb_UEO304344&callback=mapInitialize" onerror="googleError()" async defer>
             </script>
 			
 			
