--- a/index.html
+++ b/index.html
@@ -14,48 +14,14 @@
 
 </head>
 
-<body>
-
-</body>
-
-</html>
 
 <body>
 
-    <div class="container">
 
-        <div class="row">
-            <div class="col-md-12 title">Interesting Places smiling faces :)</div>
-        </div>
-        <div class="row">
-            <div id="container1" class="col-md-3">
-                <form data-bind="event: { keyup: filter}">
-                    <input data-bind="textInput: Search" type="text">
-                    <br>
-                </form>
 
-                <div id="text">
-                    <ul data-bind="foreach: markerList">
-                        <li data-bind="text: title, click: $parent.toggleBounce, visible: shouldShowMessage">
-                        </li>
-                    </ul>
-                </div>
-            </div>
-
-            <div data-bind="text: error" id="map" class="my-map col-md-9"></div>
-        </div>
-
-        <div>
-            <div class="col-md-9" id="container2" data-bind="text: error"></div>
-        </div>
 
         <div class="container">
-            <header class="row">
-                <div class="col-md-12 col-xs-12 text-center text-uppercase">
-                    <h1> Barbara Rios</h1>
-                    <h4> World Traveler</h4>
-                </div>
-            </header>
+          
 
             <div class="row">
                 <div class="col-md-12">
@@ -75,22 +41,19 @@
                     </div>
                 </section>
             </article>
+<input type="text" id="myInput" placeholder="Search for names.." title="Type in a name">
 
-            <article class="row">
-                <section class="row">
-                    <div class="col-md-12" class="col-xs-12" id="continent" style="padding-left: 25px">
-                        <p>Travels by Continent (sort of) </p>
-                    </div>
-                </section>
-            </article>
+<button onclick="myFunction(travels)">Click me</button>
+
+<script>
+
+</script>
 
 
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
-            <script src="script.js"></script>
+
+            
 			<script src="Countries2nd.js"></script>
 	
-			<script src="https://maps.googleapis.com/maps/api/js?key=KEY&callback=mapInitialize" onerror="googleError()" async defer>
-            </script>
 			
 			
 
