--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
                     </div>
                 </section>
             </article>
-<input type="text" id="myInput" placeholder="Search for names.." title="Type in a name">
+<input type="text" id="myInput" onkeyup="myFunction(travels)" placeholder="Search for names.." title="Type in a name">
 
-<button onclick="myFunction(travels)">Click me</button>
+
+
+<!--<button onclick="myFunction(travels)">Click me</button>-->
 
 <script>
 
