--- a/index.html
+++ b/index.html
@@ -10,19 +10,29 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-</head>
+<style>
+  #map {
+    height: 100%;
+  }
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+</style>
+	</head>
 
-</head>
+
 
 
 <body>
 
 
 
+   <div id="map">HJFADKJHKJ</div>          
 
         <div class="container">
-          
-
+ 
             <div class="row">
                 <div class="col-md-12">
                     <hr>
@@ -44,18 +54,24 @@
 <input type="text" id="myInput" onkeyup="myFunction(travels)" placeholder="Search for names.." title="Type in a name">
 
 
-
-<!--<button onclick="myFunction(travels)">Click me</button>-->
-
-<script>
-
-</script>
-
-
-
             
 			<script src="Countries2nd.js"></script>
 	
+
+    <script>
+      var map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 8
+        });
+      }
+    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhfx5ztQ2WuiZyMWQTDtbdb_UEO304344&callback=initMap"
+    async defer></script>
+
+
+
 			
 			
 
