--- a/index.html
+++ b/index.html
@@ -10,16 +10,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<style>
-  #map {
-    height: 100%;
-  }
-  html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-</style>
+
 	</head>
 
 
@@ -29,7 +20,7 @@
 
 
 
-   <div id="map">HJFADKJHKJ</div>          
+   <div id="map"></div>          
 
         <div class="container">
  
@@ -57,18 +48,10 @@
             
 			<script src="Countries2nd.js"></script>
 	
-
-    <script>
-      var map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 8
-        });
-      }
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhfx5ztQ2WuiZyMWQTDtbdb_UEO304344&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=KEY&callback=initMap"
     async defer></script>
+
+
 
 
 
