--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             
 			<script src="Countries2nd.js"></script>
 	
-    <script src="https://maps.googleapis.com/maps/api/js?key=KEY&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVN7I_2Ha7s8fF2oR1-NxI58Dc57SO6fA&callback=initMap"
     async defer></script>
 
 
